random sitewide spacing fixes

--- a/src/Components/Elements/Puzzles/Castitas/index.css
+++ b/src/Components/Elements/Puzzles/Castitas/index.css
@@ -5,6 +5,7 @@
   border: 3px solid gray;
   padding:0px!important;
   box-shadow: 3px;
+  margin: auto;
 }
 
 .noColor {
