--- a/src/Components/Elements/Puzzles/index.css
+++ b/src/Components/Elements/Puzzles/index.css
@@ -1,4 +1,5 @@
 .main-content-holder {
+    margin-top:2vh;
     width:90vw;
     height:80vh;
     min-width:830px;
@@ -8,7 +9,6 @@
     height:90%;
     width:100%;
 }
-
 
 .layoutComponent {
     min-width:900px;
